time-series-analytics: Addressed review comments
